--- a/git_first_file.html
+++ b/git_first_file.html
@@ -10,5 +10,6 @@
 <body>
     <h1>changed by hari om</h1>
     <script src="github.js"></script>
+    <script src="gitBgColor.js"></script>
 </body>
 </html>
