--- a/git_first_file.html
+++ b/git_first_file.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>changed by hari om</h1>
+    <h1>changed by hari om</h1>
+    <h1>changed by hari om</h1>
     <script src="github.js"></script>
     <script src="gitBgColor.js"></script>
 </body>
